update documentation, and fix a URL path problem